galley/pkg/testing/testdata/dataset/networking.istio.io/v1alpha3/destinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tcp-echo-destination
spec:
  host: tcp-echo
  subsets:
  - name: v1
    labels:
      app.kubernetes.io/version: v1
  - name: v2
    labels:
      app.kubernetes.io/version: v2
